<resources>
    <string name="app_name">bcsv.org</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="logo">logo</string>
    <string name="ImageButtonHome">homeButton</string>
    <string name="ImageButtonSermon">homeButton</string>
    <string name="ImageButtonBulletin">homeButton</string>
    <string name="ImageButtonContact">homeButton</string>
    <string name="ImageButtonAnabada">homeButton</string>
    <string name="ContentDesc_DailyBible">DailyBible</string>
    <string name="ContentDesc_Contact">Contact</string>
    <string name="ContentDesc_Website">Website</string>
    <string name="ContentDesc_SundayBible">SundayBible</string>
    <string name="ContentDesc_Sermon">Sermon</string>
    <string name="ContentDesc_Bulletin">Bulletin</string>
    <string name="ContentDesc_Logo">ChurchLogo</string>
    <string name="SundayBible">주일 본문</string>
    <string name="SundayServingTurn">주일 당번 순서</string>
    <string name="SundayBulletin">주보</string>
    <string name="SermonReview">주일 말씀 묵상</string>
    <string name="textviewChapter">Chapter</string>
    <string name="textviewText">Context</string>
    <string name="textviewBibleTitle">Title</string>
    <string name="textviewSundayDate">Date</string>
    <string name="icon_calendar">📅</string>
    <string name="icon_openbook">📖</string>
    <string name="icon_bookmark">📚</string>
    <string name="icon_pray">🙏</string>
    <string name="icon_food">🍎</string>
    <string name="icon_joycorner">👶🏼</string>
    <string name="icon_report">📝</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="fcm_header">FCM Token</string>
    <string name="display_header">Display</string>

    <!-- Endpoint Preferences -->
    <string name="fcm_token">Firebase Cloud Message Token</string>
    <string name="sunday_bible_review">주일설교 리뷰 Endpoint</string>
    <string name="sunday_serving_turn_title">주일 당번순서 Endpoint</string>

    <!-- Display Preferences -->
    <string name="font_size">폰트 크기</string>
    <string name="font_color">폰트 컬러</string>
    <string name="background_color">백그라운드 컬러</string>
    <string name="text_background_default_color">#FFFFFF</string>
    <string name="text_font_default_color">#000000</string>

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Error Message -->
    <string name="message_network_error">Network is unstable.</string>
    <string name="message_server_return_null">The server returns null value.</string>

    <!-- About Screen -->
    <string name="bcsv_url">https://bcsv.org</string>
    <string name="app_name_about">Bridgeway Church</string>
    <string name="copyright">Copyright © </string>
    <string name="church_name">브릿지웨이 침례교회</string>
    <string name="church_address">2490 Middlefield Rd. Palo Alto, CA 94301</string>
    <string name="restore_default_settings">Restore Default Settings</string>
    <string name="close_settings">Close</string>
    <string name="icon_bible">✝️</string>
    <string name="sunday_date">✝️주일</string>
    <string name="icon_memo">📝</string>
    <string name="sunday_prayer">기도</string>
    <string name="sunday_food">음식</string>
    <string name="sunday_joycorner">조이코너</string>
    <string name="sunday_praydate">화요기도회</string>
    <string name="default_notification_channel_id">channel1</string>
    <string name="dailybible_header">오늘의 말씀묵상</string>
    <string name="sunday_sermon">Sunday Sermon</string>
    <string name="sermon_text_review">Sermon Text/Review</string>
    <string name="announcement">Announcement</string>
    <string name="website_contact">Website/Contact</string>
    <string name="offering">Offering</string>
    <string name="daily_bible">Daily Bible</string>

</resources>
