<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="0dp">
    <include layout = "@layout/action_bar"
    android:id="@+id/my_actionbar">

</include>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_actionbar">

        <LinearLayout
            android:id="@+id/backgroundLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/background1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mainLogo"
                android:layout_width="230dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/ContentDesc_Logo"
                android:padding="5dp"
                android:src="@drawable/logo" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imageButtonSermon"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.7"
                        android:background="@drawable/circlebackground_button5"
                        android:contentDescription="@string/ContentDesc_Sermon"
                        android:padding="3dp"
                        android:src="@drawable/sermon" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sunday_sermon"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imageButtonSundayBible"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.7"
                        android:background="@drawable/circlebackground_button2"
                        android:contentDescription="@string/ContentDesc_SundayBible"
                        android:padding="3dp"
                        android:src="@drawable/bible" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sermon_text_review"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imageButtonBulletin"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.7"
                        android:background="@drawable/circlebackground_button6"
                        android:contentDescription="@string/ContentDesc_Bulletin"
                        android:padding="3dp"
                        android:src="@drawable/announce" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/announcement"
                        android:textColor="@color/white"
                        android:textAlignment="center"

                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imageButtonBible"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.7"
                        android:background="@drawable/circlebackground_button4"
                        android:contentDescription="@string/ContentDesc_DailyBible"
                        android:padding="3dp"
                        android:src="@drawable/dailybible" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/daily_bible"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imageButtonHome"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.7"
                        android:background="@drawable/circlebackground_button1"
                        android:contentDescription="@string/ContentDesc_Website"
                        android:padding="3dp"
                        android:src="@drawable/website" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/website_contact"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imageButtonOffering"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.7"
                        android:background="@drawable/circlebackground_button3"
                        android:contentDescription="@string/ContentDesc_Contact"
                        android:padding="3dp"
                        android:src="@drawable/offering" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/offering"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu"
        android:background="@color/bottomNavBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>