<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:paddingTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:padding="20dp"
            android:text="@string/app_name_about"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="version"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/copyright_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:text="@string/church_name"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:text="@string/church_address"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:text="@string/bcsv_url"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/about_close_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_close_screen"
            android:text="Close" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Close"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>