<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/servingturn_linearlayout_cell"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/sunday_date"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunday_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/sunday_prayer"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunday_prayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/sunday_food"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunday_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/sunday_joycorner"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunday_joycorner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/sunday_praydate"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunday_praydate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"/>
</LinearLayout>